# robot

./: .gitignore  .gitmodules  CMakeLists.txt  CalculateInitialCom.cpp  HelperFunction.h  LegsRobot.cpp  LegsRobot.hpp  README.md  RobotParamDef.hpp  Tree.hpp  WalkPatternGen.hpp  lejurobot.cpp  robot.code-workspace
Include/: HelperFunction.hpp  LegsRobot.hpp  RobotParamDef.hpp  TrajectoryGenMethod.hpp  WalkPatternGen.hpp
MatLab/: CMakeLists.txt  WalkDraw.m  preview_control_parameters_generate.m  preview_test1.m  preview_test2.m  smothstep.m  walkpattern.m
TEST/: CMakeLists.txt  angle_test.cpp  basic_test.cpp  jacobian_test.cpp  kinematics_test.cpp  state_test.cpp  trajectory_test.cpp
doc/: useful_website.md
